base/mc/yogs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mc-yogs-minecraft-cloudcmd
  namespace: mc
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/success-codes: '401'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:521397258504:certificate/30948eb5-f96e-423d-8eec-cb26cb459de6
    external-dns.alpha.kubernetes.io/hostname: yogs-files.mc.playhrzn.com
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: mc-yogs-minecraft-cloudcmd
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mc-yogs-minecraft-rcon-web
  namespace: mc
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: yogs-rwa
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:521397258504:certificate/30948eb5-f96e-423d-8eec-cb26cb459de6
    external-dns.alpha.kubernetes.io/hostname: yogs-rwa.mc.playhrzn.com
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: mc-yogs-minecraft-rcon-web-admin
          servicePort: 4326
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mc-yogs-minecraft-rcon-ws
  namespace: mc
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":4327}]'
    alb.ingress.kubernetes.io/group.name: yogs-rwa
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:521397258504:certificate/30948eb5-f96e-423d-8eec-cb26cb459de6
    external-dns.alpha.kubernetes.io/hostname: yogs-rwa.mc.playhrzn.com
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: mc-yogs-minecraft-rcon-web-admin
          servicePort: 4327
